--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 <body>
   <h1> Tic Tac Toe</h1>
   <section id="board">
-    <div class a1="square"></div>
-    <div class a2="square"></div>
-    <div class a3="square"></div>
+    <div id = "a1" class ="square"></div>
+    <div id = "a2"class a2 ="square"></div>
+    <div id = "a3"class a3 ="square"></div>
 
-    <div class b1="square"></div>
-    <div class b2="square"></div>
-    <div class b3="square"></div>
+    <div id = "b1"class b1 ="square"></div>
+    <div id = "b2"class b2 ="square"></div>
+    <div id = "b3"class b3 ="square"></div>
 
-    <div class c1 ="square"></div>
-    <div class c2 ="square"></div>
-    <div class c3  ="square"></div>
+    <div id = "c1"class c1 ="square"></div>
+    <div id = "c2"class c2 ="square"></div>
+    <div id = "c3"class c3 ="square"></div>
   </section>
 </body>
 
