further overnight work done, defined the board and POA

--- a/index.html
+++ b/index.html
@@ -5,24 +5,34 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>replit</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
-  <script src="script.js" defer></script>
+  <link href="main.css" rel="stylesheet" type="text/css" />
+  <script src="main.js" defer></script>
 </head>
 <body>
   <h1> Tic Tac Toe</h1>
   <section id="board">
-    <div id = "a1" class ="square"></div>
-    <div id = "a2"class a2 ="square"></div>
-    <div id = "a3"class a3 ="square"></div>
+    <div id = "columns">
+    <div id = "A" class = "row">
+        <div id = "1"class ="square"></div>
+        <div id = "2"class ="square"></div>
+        <div id = "3"class ="square"></div>
 
-    <div id = "b1"class b1 ="square"></div>
-    <div id = "b2"class b2 ="square"></div>
-    <div id = "b3"class b3 ="square"></div>
+    </div>
 
-    <div id = "c1"class c1 ="square"></div>
-    <div id = "c2"class c2 ="square"></div>
-    <div id = "c3"class c3 ="square"></div>
+    <div id = "B" class = "row">
+        <div id = "4"class ="square"></div>
+        <div id = "5"class ="square"></div>
+        <div id = "6"class ="square"></div>
+</div>
+
+    <div id = "C" class = "row">
+        <div id = "7"class ="square"></div>
+        <div id = "8"class ="square"></div>
+        <div id = "9"class ="square"></div>
+</div>
+</div>
   </section>
 </body>
 
 </html>
+
